# python-microservice

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
app/: Test.py  main.py
app/config/: settings.py
app/exercise/: ListExample.py
app/kafka/: __init__.py  consumer.py  producer.py
app/mongo/: ConnectToMongoDB.py  DynamicFormInsertBatchCmd.py  mongoMain.py
app/services/: example_service.py
app/threading_pac/: MultipleLockExample.py
app/utils/: logger.py
pip/: pip.conf
scripts/: setup.bat
tests/: test_basic.py  test_fake_kafka.py  test_kafka.py
