[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "python-microservice-be"
version = "0.0.7"
description = "Example project"
readme = "README.md"
requires-python = ">=3.11"
#license = { file = "LICENSE" }
authors = [{ name = "shyam Dev", email = "shyamrao.b@reactore.com" }]


[tool.hatch.build.targets.wheel]
packages = ["src"]